--- a/olca-app/html/report_view.html
+++ b/olca-app/html/report_view.html
@@ -7,7 +7,6 @@
 
     <title>Report Preview</title>
     <link href="../libs/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
-	<!-- <script type="text/javascript" src="../libs/excanvas.compiled.js"></script> -->
 	<!--[if IE]><script type="text/javascript" src="../libs/excanvas.js"></script><![endif]-->
       <!--[if lte IE 8]>
         <script>
@@ -141,7 +140,7 @@
 
     <script src="../libs/jquery.min_1.9.0.js"></script>
     <script src="../libs/angular.min.js"></script>
-    <script src="../libs/bootstrap/js/bootstrap.min.js"></script>
+    <script src="../libs/angularui.min.js"></script>
     <script src="../libs/Chart.min.js"></script>
     <script src="../libs/olca.utils.js"></script>
     <script src="../libs/ui-bootstrap-tpls-0.11.0.min.js"></script>
