--- a/olca-app/html/report_view.html
+++ b/olca-app/html/report_view.html
@@ -142,7 +142,7 @@
     <script src="../libs/jquery.min_1.9.0.js"></script>
     <script src="../libs/angular.min.js"></script>
     <script src="../libs/angularui.min.js"></script>
-    <script src="../libs/Chart.js"></script>
+    <script src="../libs/ChartHorizontalBar.js"></script>
     <script src="../libs/olca.utils.js"></script>
     <script src="../libs/ui-bootstrap-tpls-0.11.0.min.js"></script>
 
@@ -189,15 +189,15 @@
 		<div class="table-responsive">
 			<table class="table table-hover">
 				<thead><tr><th>Indicator</th>
-							<th data-ng-repeat="dataset in totalResult.datasets">{{dataset.title}}</th>
+							<th data-ng-repeat="result in report.results[0].variantResults">{{result.variant}}</th>
 						</tr></thead>
 				<tbody>
-				<tr data-ng-repeat="label in totalResult.labels">
+				<tr data-ng-repeat="indicator in report.results">
 					<td>
-						{{label}}
+						{{indicator.indicator}}
 					</td>
-					<td data-ng-repeat="dataset in totalResult.datasets">
-						{{dataset.data[$parent.$index]}}
+					<td data-ng-repeat="result in indicator.variantResults">
+						{{result.totalAmount | scientific}}
 					</td>
 				</tr>
                 </tbody>
@@ -230,6 +230,12 @@
     <script type="text/javascript">
         var variantsIndex = 0;
         var app = angular.module('ReportPreviewPage', ['ui.bootstrap']);
+
+        app.filter('scientific', function () {
+            return function (text) {
+                return parseFloat(text).toExponential(5);
+            };
+        });
 
 	    var Controller = function ($scope) {
         	$scope.report = {};
@@ -426,7 +432,6 @@
         				index++;
         		    });
        	     });
-            console.log(totalResult);
         	return totalResult;
         }
 
