added report export

--- a/olca-app/html/report_view.html
+++ b/olca-app/html/report_view.html
@@ -522,6 +522,9 @@
 			return isIE;
 		}
 
+		//do not remove or modify the comment below, it is used as template for static report exports.
+		//{{set_data_call}}
+		
     </script>
 </body>
 </html>
