added section list with delete and swap functions

--- a/olca-app/html/report_view.html
+++ b/olca-app/html/report_view.html
@@ -121,9 +121,7 @@
 			<div class="row">
 				<div data-ng-repeat="section in report.sections" class="col-sm-12 box-row1">
 					<h3>{{section.title}}</h3>
-					<p>
-						{{section.text}}
-					</p>
+					<p>{{section.text}}</p>
 					<div data-ng-if="section.componentId == 'parameter_table'" data-ng-include src="'parameters-table.html'"></div>
 					<div data-ng-if="section.componentId == 'variant_table'" data-ng-include src="'variants-table.html'"></div>
 					<div id="result-charts-include-container" data-ng-if="section.componentId == 'total_result_chart'" data-ng-include src="'total-result-charts.html'"></div>
