fixed links in start page; upgraded version

--- a/olca-app/html/start_page.html
+++ b/olca-app/html/start_page.html
@@ -153,9 +153,9 @@
 	              <p>For the 1.4 version, we completely redesigned and “renovated”
 	                openLCA. Results are</p>
 	              <ul>
-	                <li><b>drastically</b> <a onclick="callOpenUrl('http://www.openlca.org/performance')" target="blank" class="btn btn-default"><b>improved performance</b></a> of about 400%</li>
-	                <li><b>numerous</b> <a onclick="callOpenUrl('http://www.openlca.org/performance')" href="http://www.openlca.org/features#usability" target="blank" class="btn btn-default"><b>usability improvements</b></a></li>
-	                <li><b>many</b> <a onclick="callOpenUrl('http://www.openlca.org/performance')" href="http://www.openlca.org/features#overview1.4" target="blank" class="btn btn-default"><b>new features</b></a></li>
+	                <li><b>drastically</b> <a onclick="callOpenUrl('http://www.openlca.org/performance')" class="btn btn-default"><b>improved performance</b></a> of about 400%</li>
+	                <li><b>numerous</b> <a onclick="callOpenUrl('http://www.openlca.org/features#usability')" class="btn btn-default"><b>usability improvements</b></a></li>
+	                <li><b>many</b> <a onclick="callOpenUrl('http://www.openlca.org/features#overview1.4')" class="btn btn-default"><b>new features</b></a></li>
 	              </ul>
 	            </td>
 	            <td>
@@ -174,7 +174,7 @@
 	            <td>
 	              <h3><img style="width: 61px; height: 54px;" src="../images/search.gif"
 	                  alt="">Searching for and downloading data</h3>
-	              <p>A broad range of LCA databases are available in <a onclick="callOpenUrl('https://nexus.openlca.org/). ')" target="blank"
+	              <p>A broad range of LCA databases are available in <a onclick="callOpenUrl('https://nexus.openlca.org/')" target="blank"
 	                  class="btn btn-default">openLCA nexus</a>,
 	                where you can search for single data sets and also for complete
 	                databases, and download them into openLCA. The databases are all
@@ -220,7 +220,7 @@
         <script type="text/javascript">
             $(document).ready(function() {
                 $('#gd-logo').on('click', function() {
-                    window.open('http://www.greendelta.com', '_blank');
+                    callOpenUrl('http://www.greendelta.com');
                 });
             });
 
