- Updated start page links

--- a/olca-app/html/start_page.html
+++ b/olca-app/html/start_page.html
@@ -166,7 +166,7 @@
 	                started. You can just import a database from an existing
 	                zolca-file and open it from the navigation on the left side.
 	                Then open the database with a simple double click.</p>
-	              <p>This is explained in a video, <a onclick="callOpenUrl('http://www.openlca.org/videos#start')"
+	              <p>This is explained in a video, <a onclick="callOpenUrl('http://www.openlca.org/learnmore#videos')"
 	                  target="blank" class="btn btn-default">here</a></p>
 	            </td>
 	          </tr>
@@ -174,12 +174,12 @@
 	            <td>
 	              <h3><img style="width: 61px; height: 54px;" src="../images/search.gif"
 	                  alt="">Searching for and downloading data</h3>
-	              <p>A broad range of LCA databases are available in <a onclick="callOpenUrl('https://nexus.openlca.org/). ')" target="blank"
+	              <p>A broad range of LCA databases are available in <a onclick="callOpenUrl('http://nexus.openlca.org')" target="blank"
 	                  class="btn btn-default">openLCA nexus</a>,
 	                where you can search for single data sets and also for complete
 	                databases, and download them into openLCA. The databases are all
 	                fit for openLCA, several databases can be combined.</p>
-	              <p>This is also explained in a <a onclick="callOpenUrl('http://www.openlca.org/videos#data')"
+	              <p>This is also explained in a <a onclick="callOpenUrl('http://www.openlca.org/learnmore#videos')"
 	                  target="blank" class="btn btn-default">video</a><br>
 	                LCIA method packs are available from the openLCA <a onclick="callOpenUrl('http://www.openlca.org/downloads')"
 	                  target="blank" class="btn btn-default">download page</a></p>
@@ -190,7 +190,7 @@
 	              <p>The online wiki for openLCA provides details about almost all
 	                features of openLCA. It is changing over time so check back from
 	                time to time.</p>
-	              <p>New introductory and comprehensive <a onclick="callOpenUrl('http://www.openlca.org/manuals')" target="blank"
+	              <p>New introductory and comprehensive <a onclick="callOpenUrl('http://www.openlca.org/learnmore')" target="blank"
 	                  class="btn btn-default">manuals</a> are also available online.</p>
 	            </td>
 	          </tr>
@@ -207,7 +207,7 @@
 	              <h3><img src="../images/community.gif"
 	                  alt="">Community</h3>
 	              <p>An increasing number of people are using openLCA. Register in the <a
-	                  onclick="callOpenUrl('http://www.openlca.org/forum')" target="blank" class="btn btn-default">forum</a> to share your thoughts, ask questions, read answers and participate in the community.</p>
+	                  onclick="callOpenUrl('http://www.openlca.org/learnmore#forum')" target="blank" class="btn btn-default">forum</a> to share your thoughts, ask questions, read answers and participate in the community.</p>
 	            </td>
 	          </tr>
 		        </tbody>
