--- a/olca-app/html/start_page.html
+++ b/olca-app/html/start_page.html
@@ -159,9 +159,9 @@
 	              <p>For the 1.4 version, we completely redesigned and “renovated”
 	                openLCA. Results are</p>
 	              <ul>
-	                <li><b>drastically</b> <a onclick="callOpenUrl('http://www.openlca.org/performance')" target="blank" class="btn btn-default"><b>improved performance</b></a> of about 400%</li>
-	                <li><b>numerous</b> <a onclick="callOpenUrl('http://www.openlca.org/performance')" href="http://www.openlca.org/features#usability" target="blank" class="btn btn-default"><b>usability improvements</b></a></li>
-	                <li><b>many</b> <a onclick="callOpenUrl('http://www.openlca.org/performance')" href="http://www.openlca.org/features#overview1.4" target="blank" class="btn btn-default"><b>new features</b></a></li>
+	                <li><b>drastically</b> <a onclick="callOpenUrl('http://www.openlca.org/performance')" class="btn btn-default"><b>improved performance</b></a> of about 400%</li>
+	                <li><b>numerous</b> <a onclick="callOpenUrl('http://www.openlca.org/performance')" class="btn btn-default"><b>usability improvements</b></a></li>
+	                <li><b>many</b> <a onclick="callOpenUrl('http://www.openlca.org/performance')"  class="btn btn-default"><b>new features</b></a></li>
 	              </ul>
 	            </td>
 	            <td>
