--- a/olca-app/html/product_system_statistics.html
+++ b/olca-app/html/product_system_statistics.html
@@ -7,11 +7,8 @@
 	<style type="text/css">
 		#contentDiv {
 			margin:20px;
-		}
-		
-		
-	</style>
-	
+		}		
+	</style>	
 </head>
 <body>
 	<div id="contentDiv" data-ng-controller="Controller">		
@@ -46,11 +43,11 @@
 			</tr>			
 			<tr>
 				<td><h4>Reference process</h4></td>
-				<td><h4><a href="#">{{statistics.refProcess.name}}</a></h4></td>
+				<td><h4><a href="#" data-ng-click="callOpenProcess(statistics.refProcess)">{{statistics.refProcess.name}}</a></h4></td>
 			</tr>
 			<tr>
 				<td></td>
-				<td><button type="button" class="btn btn-primary btn-lg">Recalculate</button></td>
+				<td><button type="button" data-ng-click="callRecalculate()" class="btn btn-primary btn-lg">Recalculate</button></td>
 			</tr>
 			</tbody>		
 		</table>
@@ -74,7 +71,7 @@
 					</svg>			
 				</td>
 				<td><h4>{{degreeVal.degree}}</h4></td>
-				<td class="text-left"><h4><a href="#">{{degreeVal.process.name}}</a></h4></td>				
+				<td class="text-left"><h4><a href="#" data-ng-click="callOpenProcess(degreeVal.process)">{{degreeVal.process.name}}</a></h4></td>				
 			</tr>			
 			</tbody>
 		</table>
@@ -96,12 +93,10 @@
 					</svg>			
 				</td>
 				<td><h4>{{degreeVal.degree}}</h4></td>
-				<td class="text-left"><h4><a href="#">{{degreeVal.process.name}}</a></h4></td>				
+				<td class="text-left"><h4><a href="#" data-ng-click="callOpenProcess(degreeVal.process)">{{degreeVal.process.name}}</a></h4></td>				
 			</tr>			
 			</tbody>
-		</table>
-		
-	
+		</table>	
 	
 	</div>
 	<script src="../libs/jquery.min_1.9.0.js"></script>
@@ -114,6 +109,22 @@
 		
 		var controller = function($scope) {
 			$scope.statistics = {};
+			
+			$scope.callOpenProcess = function(process) {
+				if(typeof(openProcess) != 'undefined') {
+					openProcess(angular.toJson(process));
+				} else {
+					console.log('openProcess is not a registered function');
+				}
+			};
+			
+			$scope.callRecalculate = function() {
+				if(typeof(recalculate) != 'undefined') {
+					recalculate();
+				} else {
+					console.log('recalculate is not a registered function');
+				}
+			};
 		}
 		app.controller('Controller', controller);
 		
@@ -138,17 +149,14 @@
 				});
 			};
 		});
-		
+						
 		function setData(statistics) {
 			var element = document.getElementById("contentDiv");
 			var scope = angular.element(element).scope();
 			scope.$apply(function () {
 				scope.statistics = statistics;
 			});
-		}
-		
-	
-	</script>
-	
+		}	
+	</script>	
 </body>	
 </html>
