--- a/olca-app/html/start_page_zh.html
+++ b/olca-app/html/start_page_zh.html
@@ -3,7 +3,7 @@
   <head>
     <meta content="text/html; charset=utf-8" http-equiv="content-type">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-    <title>Bienvenido a openLCA</title>
+    <title>欢迎到 openLCA</title>
     <link href="../libs/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <style type="text/css">
         body {
@@ -130,20 +130,20 @@
 	          <tr>
 	            <td id="logo-cell">
 	                <img id="logo" src="../images/logo.png" onclick="callOpenUrl('http://www.openlca.org')" />
-	                <h1>¡Bienvenido a openLCA!</h1>
+	                <h1>欢迎到 openLCA!</h1>
 	                <span class="subtitle">{{data.version}}</span>
 	            </td>
 	          </tr>
 	          <tr>
 	            <td>
-	              <p class="description">Software de código abierto y alto rendimiento para Análisis del Ciclo de Vida (ACV) y evaluación de sostenibilidad.</p>
-	              <p class="description">Disponible gratis desde 2006. Creado y desarrollado por GreenDelta, Berlin. <a onclick="callOpenUrl('www.openlca.org/open-source')" class="subtle-link" target="blank" class="btn btn-default">www.greendelta.com</a></p>
+	              <p class="description">高性能生命周期评价和可持续性评价软件. 真的是开源.</p>
+	              <p class="description">可用免费. 自从 2006, 由 GreenDelta 创造的和维护的. <a onclick="callOpenUrl('www.openlca.org/open-source')" class="subtle-link" target="blank" class="btn btn-default">www.greendelta.com</a></p>
 	            </td>
 	          </tr>
 	          <tr>
 	            <td>
 	              <div id="gd-logo"></div>
-	              <p class="description">Licenciado bajo la Mozilla Public License (<a onclick="callOpenUrl('www.openlca.org/open-source')" target="blank" class="btn btn-default">¿qué significa esto?</a>).</p></td>                  
+	              <p class="description">许可证: Mozilla Public License (<a onclick="callOpenUrl('www.openlca.org/open-source')" target="blank" class="btn btn-default">是什么意思吗?</a>).</p></td>                  
 	            </td>
 	          </tr>
 	        </tbody>
@@ -155,65 +155,55 @@
 	          <tr>
 	            <td>
 	              <h3><img src="../images/news.gif"
-	                  alt="">Novedades y mejoras</h3>
-	              <p>Para la versión 1.4 hemos rediseñado y "renovado" completamente
-	                openLCA. Los resultados son:</p>
+	                  alt="">有什么新鲜事</h3>
+	              <p>为版本 1.4, 完全重新设计:</p>
 	              <ul>
-	                <li><b>drástico</b> <a onclick="callOpenUrl('http://www.openlca.org/performance')" class="btn btn-default"><b>incremento del rendimiento</b></a> de alrededor del 400%</li>
-	                <li><b>numerosas</b> <a onclick="callOpenUrl('http://www.openlca.org/performance')" class="btn btn-default"><b>mejoras de uso</b></a></li>
-	                <li><b>muchas</b> <a onclick="callOpenUrl('http://www.openlca.org/performance')"  class="btn btn-default"><b>nuevas funcionalidades</b></a></li>
+	                <li><b>彻底地</b> <a onclick="callOpenUrl('http://www.openlca.org/performance')" class="btn btn-default"><b>改良性能</b></a> 约 400%</li>
+	                <li><b>许多</b> <a onclick="callOpenUrl('http://www.openlca.org/performance')" class="btn btn-default"><b>可用性改进</b></a></li>
+	                <li><b>许多</b> <a onclick="callOpenUrl('http://www.openlca.org/performance')"  class="btn btn-default"><b>新特点</b></a></li>
 	              </ul>
 	            </td>
 	            <td>
 	              <h3><img src="../images/getting-started.gif"
-	                  alt="">Cómo empezar</h3>
-	              <p>Cuando se inicia openLCA por primera vez, no contiene ningún
-	                dato. Pero es realmente fácil empezar
-	                a usar openLCA. Sólo hay que importar una base de datos desde un archivo
-					zolca existente. Después, abra la base de datos haciendo doble click 
-					sobre ella en el menú de navegación de la izquierda.
-	                </p>
-	              <p>Ésto se explica más detalladamente en un vídeo disponible <a onclick="callOpenUrl('http://www.openlca.org/learnmore#videos')"
-	                  target="blank" class="btn btn-default">aquí</a></p>
+	                  alt="">入门指南</h3>
+	              <p>当第一次启动 openLCA, 没有数据. 在新版本, 是真的很容易就可以开始. 你可以简单地从现存的数据库输入 zolca 文件, 然后打开从导航</p>
+	              <p>这是一段 <a onclick="callOpenUrl('http://www.openlca.org/learnmore#videos')"
+	                  target="blank" class="btn btn-default">视频</a> 中解释</p>
 	            </td>
 	          </tr>
 	          <tr>
 	            <td>
 	              <h3><img style="width: 61px; height: 54px;" src="../images/search.gif"
-	                  alt="">Buscar y descargar datos</h3>
-	              <p>Un gran número de bases de datos de ACV están disponibles en <a onclick="callOpenUrl('http://nexus.openlca.org')" target="blank"
+	                  alt="">搜索和下载数据</h3>
+	              <p>许多数据库是可用的在 <a onclick="callOpenUrl('http://nexus.openlca.org')" target="blank"
 	                  class="btn btn-default">openLCA nexus</a>,
-	                donde se pueden buscar tanto series de datos individuales como
-	                bases de datos completas. Todas estas bases de datos
-					pueden utilizarse en openLCA, incluso combinándolas entre ellas.</p>
-	              <p>Hay una explicación más detallada en video disponible <a onclick="callOpenUrl('http://www.openlca.org/learnmore#videos')"
-	                  target="blank" class="btn btn-default">aquí</a><br>
-	                Paquetes de métodos para la evaluación del impacto del ciclo de vida (EICV) están disponibles en la página de <a onclick="callOpenUrl('http://www.openlca.org/downloads')"
-	                  target="blank" class="btn btn-default">descargas </a> de openLCA</p>
+	                那里你可以搜索的完整数据库，单个数据集 和 下载他们入 openLCA. 数据库均适合 openLCA, 而且可以结合几个数据库.</p>
+	              <p>这也是一段 <a onclick="callOpenUrl('http://www.openlca.org/learnmore#videos')"
+	                  target="blank" class="btn btn-default">视频</a> 中解释<br>
+	                生命周期影响评价方法包可以从 <a onclick="callOpenUrl('http://www.openlca.org/downloads')"
+	                  target="blank" class="btn btn-default">openLCA 下载网站</a> 下载</p>
 	            </td>
 	            <td>
 	              <h3><img src="../images/documentation.gif"
-	                  alt="">Manuales de usuario</h3>
-	              <p>La wiki de openLCA disponible en la red contiene detalles sobre casi todas las
-	                funciones del software. Se actualiza periódicamente, así que recomendamos que los 
-					usuarios la revisen de vez en cuando.</p>
-	              <p>Hay también disponibles nuevos <a onclick="callOpenUrl('http://www.openlca.org/learnmore')" target="blank"
-	                  class="btn btn-default">manuales </a> de introducción detallados en la web.</p>
+	                  alt="">用户手册</h3>
+	              <p>在线 wiki 为 openLCA 提供细节信息. 随着时间改变所以请检查偶尔地.</p>
+	              <p>新的介绍性和全面的 <a onclick="callOpenUrl('http://www.openlca.org/learnmore')" target="blank"
+	                  class="btn btn-default">手册</a> 网上也有.</p>
 	            </td>
 	          </tr>
 	          <tr>
 	            <td>
 	              <h3><img src="../images/examples.gif"
-	                  alt="">Ejemplos</h3>
-	              <p>Aquí se pueden consultar casos prácticos que demuestran cómo usar openLCA:</p>
-	              <p><a onclick="callOpenUrl('http://www.openlca.org/case_studies#1_3')" target="blank" class="btn btn-default">Estudios para la versión 1.3</a></p>
-	              <p><a onclick="callOpenUrl('http://www.openlca.org/case_studies#1_4')" target="blank" class="btn btn-default">Estudios para la versión 1.4</a></p>
+	                  alt="">例子</h3>
+	              <p>这里有范例分析，说明了如何使用 openLCA:</p>
+	              <p><a onclick="callOpenUrl('http://www.openlca.org/case_studies#1_3')" target="blank" class="btn btn-default">版本1.3的范例分析</a></p>
+	              <p><a onclick="callOpenUrl('http://www.openlca.org/case_studies#1_4')" target="blank" class="btn btn-default">版本1.4的范例分析</a></p>
 	            </td>
 	            <td>
 	              <h3><img src="../images/community.gif"
-	                  alt="">Comunidad de usuarios</h3>
-	              <p>Cada vez hay más gente que usa openLCA. Regístrese en el <a
-	                  onclick="callOpenUrl('http://www.openlca.org/learnmore#forum')" target="blank" class="btn btn-default">foro</a> para compartir sus opiniones, hacer preguntas, consultar respuestas y participar en la comunidad de usuarios.</p>
+	                  alt="">公众</h3>
+	              <p>越来越多的人正在使用 openLCA. 在 <a
+	                  onclick="callOpenUrl('http://www.openlca.org/learnmore#forum')" target="blank" class="btn btn-default">论坛</a> 中注册上分享想法，问问题, 阅读答案并参与.</p>
 	            </td>
 	          </tr>
 		        </tbody>
